Changelog
=========

0.5 - Unreleased
----------------

* Form criteria are now designated by selecting which fields of each
  criterion should be rendered on the search form
* Improve label handling.  Remove labels for 'value' field and
  "required" markers for all fields.
* Make the search form collapsible and start collapsed when the form
  has been submitted

0.4 - 2009-01-15
----------------

* Add list criterion
* Add selection criterion
* Fix the form for access by anonymous users

0.3 - 2009-01-15
----------------

* Fully re-use the AT edit widgets
* Support criteria with multiple fields
* Use the widgets to process the form values
* Add checkbox criterion based on ATSelectionCriterion,
  ATPortalTypeCriterion, and ATReferenceCriterion
* Add a date range form criterion (JS calendar not working yet)

0.2 - 2008-05-27
----------------

* Fix i18n_domain in ZCML
* Make the authenticator view conditional for Plone 3.0 compatibility

0.1 - 2008-05-24
----------------

* Initial release
