@@ -1,0 +1,7 @@
+from zope.cachedescriptors import property
+
+class CommaWidgetView(object):
+
+    @property.Lazy
+    def macros(self):
+        return self['macros']
