@@ -15,6 +15,7 @@
    <criteria>ATCurrentAuthorCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ListFormCriterion</criteria>
+   <criteria>CommaFormCriterion</criteria>
   </index>
   <index name="Date"
      description="The time and date an item was last modified"
@@ -50,6 +51,7 @@
   <index name="getEventType" description="" enabled="False" friendlyName="">
    <criteria>ATCurrentAuthorCriterion</criteria>
    <criteria>ListFormCriterion</criteria>
+   <criteria>CommaFormCriterion</criteria>
    <criteria>ReferenceSelectionFormCriterion</criteria>
    <criteria>ReferenceCheckboxFormCriterion</criteria>
    <criteria>SelectionFormCriterion</criteria>
@@ -63,6 +65,7 @@
      i18n:attributes="description; friendlyName">
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ListFormCriterion</criteria>
+   <criteria>CommaFormCriterion</criteria>
   </index>
   <index name="getRawRelatedItems"
      description="Find items related to the selected items" enabled="True"
@@ -76,6 +79,7 @@
      i18n:attributes="description; friendlyName">
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ListFormCriterion</criteria>
+   <criteria>CommaFormCriterion</criteria>
   </index>
   <index name="modified"
      description="The time and date an item was last modified" enabled="True"
@@ -98,6 +102,7 @@
    <criteria>CheckboxFormCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ListFormCriterion</criteria>
+   <criteria>CommaFormCriterion</criteria>
   </index>
   <index name="SearchableText" description="Text search of an item's contents"
      enabled="True" friendlyName="Search Text"
@@ -117,6 +122,7 @@
    <criteria>CheckboxFormCriterion</criteria>
    <criteria>SimpleStringFormCriterion</criteria>
    <criteria>ListFormCriterion</criteria>
+   <criteria>CommaFormCriterion</criteria>
   </index>
   <index name="Title" description="Text search of an item's title"
      enabled="True" friendlyName="Title"
